--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^10.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
