--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,10 @@
     "mongoose": "^8.2.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
