--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.8.0",
     "jsonwebtoken": "^9.0.2",
@@ -33,8 +32,10 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0"
   }
 }
