--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
     "init": "^0.1.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
