--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "test": "jest"
+    "test": "jest",
+    "build": "npm install && npm install --prefix my-app && npm run build --prefix my-app"
   },
   "repository": {
     "type": "git",
