--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "sutairushop": "file:..",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
